Begin Fall 2025 updates

--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -27,9 +27,9 @@
             </div>
             <div id="contentnobars" role="main">
                 <p>
-                    This page serves as the syllabus for PSU 16, Section 550: First-Year Seminar-Statistics/Data Science (ECoS) course in Fall 2024. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
+                    This page serves as the syllabus for PSU 16, Section 550: First-Year Seminar-Statistics/Data Science (ECoS) course in Fall 2025. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
-                <p>Last Updated: 8/31/2024</p>
+                <p>Last Updated: 8/17/2025</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -53,8 +53,8 @@
                 <h2 id="meetingInfo">Course Meeting Info</h2>
                 <p>Our course meets once a week, in person, all semester with the exception of university holidays and closures. Each meeting is 50 minutes in length.</p>
                 <ul>
-                    <li><strong>Location:</strong> Business 104</li>
-                    <li><strong>Time:</strong> Mondays, 2:30pm to 3:20pm (ET)</li>
+                    <li><strong>Location:</strong> Willard 351</li>
+                    <li><strong>Time:</strong> Mondays, 10:10am to 11:00am (ET)</li>
                 </ul>
                 <p>Changes of venue (as needs arise) will be announced via email as soon as possible.</p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
@@ -125,8 +125,8 @@
                         <strong>Respect the Learning Process of Others:</strong> Allow people the opportunity to think, reflect, and construct their understandings. When assisting your students or your peers, pose  questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
-                <h3>Updated: Student Responsibilities</h3>
-                <p>Here is what the Fall 2024 class came up with as student responsibilities.</p>
+                <h3><mark>TBD:</mark> Student Responsibilities</h3>
+                <p>The Fall 2025 class will have an opportunity to identify their own list of student responsibilities. Here is what the Fall 2024 class generated.</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li>Show up/attend class</li>
                     <li>Respect everyone</li>
@@ -139,8 +139,8 @@
                     <li>Show willingness to learn</li>
                     <li>Be part of the class community</li>
                 </ul>
-                <h3>Updated: Teacher Responsibilities</h3>
-                <p>Here are the teacher responsibilities that Fall 2024 class generated.</p>
+                <h3><mark>TBD:</mark> Teacher Responsibilities</h3>
+                <p>The Fall 2025 class will have the opportunity to generate a list of teacher responsibities. Here is what the Fall 2024 class generated.</p>
                 <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
                     <li>Create a welcoming environment</li>
                     <li>Lead discussions</li>
@@ -162,9 +162,9 @@
                 <p>
                     Given the role that attending class plays in your learning, excessive abscences can jeopardize your final course grade. We only meet once a week so each abscence adds up quickly. Just three absences equates to missing 20% of the course.
                 </p>
-                <h4>Updated: Participation</h4>
+                <h4><mark>TBD:</mark> Participation</h4>
                 <p>
-                    Given that this course is primarily discussion based, your participation is absolutely necessary. Here is what the Fall 2024 class came up with as participating entails.
+                    Given that this course is primarily discussion based, your participation is absolutely necessary. The Fall 2025 class will come up with their own indicators of participation. Here is what the Fall 2024 class used.
                 </p>
                 <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
                     <li>Attending class</li>
@@ -214,8 +214,8 @@
                 <p>
                     This also means that we need to be able to show and give grace to each other. We must all acknowledge that sometimes unexpected things occur and can cause problems. To this end, we need to keep open lines of communication. Reach out to me and keep me informed of external pressures.
                 </p>
-                <h3>Updated: Examination Policy</h3>
-                <p>The Fall 2024 class has voted to not have a Final Exam nor any tests.</p>
+                <h3><mark>TBD:</mark> Examination Policy</h3>
+                <p>The Fall 2025 will have the opportunity to decide on whether there are any final exams or tests in the course.</p>
                 <h3>Grading Policy</h3>
                 <p>
                     While there are different types of assignments, they are all equally important to your growth. Thus, there no category weights.
@@ -264,7 +264,7 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">Tentative Course Calendar</h2>
                 <table rules="all" border="1px" style="margin-left:auto; margin-right:auto;">
-                  <caption>Tentative Fall 2024 Schedule</caption>
+                  <caption>Tentative Fall 2025 Schedule</caption>
                   <thead>
                     <tr>
                       <th scope="col">Week</th>
@@ -275,87 +275,87 @@
                   <tbody>
                     <tr>
                       <td>1</td>
-                      <td>Monday, August 26, 2024</td>
-                      <td>Welcome</td>
+                      <td>Monday, August 25, 2025</td>
+                      <td>Welcome to the Department <br/> <mark>Class will meet in Thomas 327</mark></td>
                     </tr>
                     <tr>
                       <td>2</td>
-                      <td>Monday, September 2, 2024</td>
+                      <td>Monday, September 1, 2025</td>
                       <td>Labor Day--No Class</td>
                     </tr>
                     <tr>
                       <td>3</td>
-                      <td>Monday, September 9, 2024</td>
-                      <td>Meet the Department Pizza Party <br/> <mark>Class will meet in Thomas 327</mark></td>
+                      <td>Monday, September 9, 2025</td>
+                      <td><mark>Class will meet in Willard 351</mark> <br/> TBA</td>
                     </tr>
                     <tr>
                       <td>4</td>
-                      <td>Monday, September 16, 2024</td>
+                      <td>Monday, September 15, 2025</td>
                       <td>Strong Student, Part 1</td>
                     </tr>
                     <tr>
                       <td>5</td>
-                      <td>Monday, September 23, 2024</td>
+                      <td>Monday, September 22, 2025</td>
                       <td>Strong Student, Part 2</td>
                     </tr>
                     <tr>
                       <td>6</td>
-                      <td>Monday, September 30, 2024</td>
-                      <td>Strong Student, Part 3</td>
+                      <td>Monday, September 29, 2025</td>
+                      <td>Strong Student, Part 3 <br/>Final Exam Schedules</td>
                     </tr>
                     <tr>
                       <td>7</td>
-                      <td>Monday, October 7, 2024</td>
+                      <td>Monday, October 6, 2025</td>
                       <td>Strong Student, Part 4</td>
                     </tr>
                     <tr>
                       <td>8</td>
-                      <td>Monday, October 14, 2024</td>
+                      <td>Monday, October 13, 2025</td>
                       <td>Mid-Semester Check-In</td>
                     </tr>
                     <tr>
                       <td>9</td>
-                      <td>Monday, October 21, 2024</td>
-                      <td>Majoring in Stats/Data Science<br/>Guest: Andrea Brandimarte</td>
+                      <td>Monday, October 20, 2025</td>
+                      <td>???Majoring in Stats/Data Science<br/>Guest: Andrea Brandimarte</td>
                     </tr>
                     <tr>
                       <td>10</td>
-                      <td>Monday, October 28, 2024</td>
-                      <td>OSE: Careers, Internships, Co-ops, and PD<br/>Guest: Dustin Zettle</td>
+                      <td>Monday, October 27, 2025</td>
+                      <td>???OSE: Careers, Internships, Co-ops, and PD<br/>Guest: Dustin Zettle</td>
                     </tr>
                     <tr>
                       <td>11</td>
-                      <td>Monday, November 4, 2024</td>
-                      <td>OSE Undergraduate Research<br/>Guest: Dr. Tiffany Mathews</td>
+                      <td>Monday, November 3, 2025</td>
+                      <td>???OSE Undergraduate Research<br/>Guest: Dr. Tiffany Mathews</td>
                     </tr>
                     <tr>
                       <td>12</td>
-                      <td>Monday, November 11, 2024</td>
-                      <td>Guest Panel 1</td>
+                      <td>Monday, November 10, 2025</td>
+                      <td>???Guest Panel 1</td>
                     </tr>
                     <tr>
                       <td>13</td>
-                      <td>Monday, November 18, 2024</td>
-                      <td>Guest Panel 2</td>
+                      <td>Monday, November 17, 2025</td>
+                      <td>???Guest Panel 2</td>
                     </tr>
                     <tr>
                       <td>14</td>
-                      <td>Monday, November 25, 2024</td>
+                      <td>Monday, November 24, 2025</td>
                       <td>Thanksgiving Break--No Class</td>
                     </tr>
                     <tr>
                       <td>15</td>
-                      <td>Monday, December 2, 2024</td>
+                      <td>Monday, December 1, 2025</td>
                       <td>Ethics in Stats/Data Science and the Rise of AI</td>
                     </tr>
                     <tr>
                       <td>16</td>
-                      <td>Monday, December 9, 2024</td>
+                      <td>Monday, December 8, 2025</td>
                       <td>Flex</td>
                     </tr>
                     <tr>
                       <td>17</td>
-                      <td>Monday, December 16, 2024</td>
+                      <td>Monday, December 15, 2025</td>
                       <td>Finals Week</td>
                     </tr>
                   </tbody>
@@ -496,8 +496,8 @@
                 <p>
                     An important part aspect of this course is to help you develop foundational ways of thinking about teaching so that you can create your own lessons. Using tools such as generative AI to design, create, prepare lessons plans for you not only cheats yourself of an invaluable learning opportunity, but it also cheats your students. Therefore, unless explicit permission is given for a particular assignment, the entire class community (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. When such use is explicitly authorized, that work should be properly documented. Direct usage of output from chatbots should be treated much like a direct quotation; derivations of such output should be treated as paraphrased text.
                 </p>
-                <h4>Updated: Generative AI Policy</h4>
-                <p>Based upon the input I received from the class, I have put in place the following policy around using generative AI tools in this course (PSU 16, Sec. 550).</p>
+                <h4>Generative AI Policy</h4>
+                <p>I have put in place the following policy around using generative AI tools in this course (PSU 16, Sec. 550).</p>
                 <dl>
                     <dt>Allowed Usages</dt>
                     <dd>
@@ -528,17 +528,19 @@
                     Any instances of academic dishonesty will be pursued under the <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. For more information on academic integrity, see <a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">Penn State's statement on plagiarism and academic dishonesty</a>.
                 </p>
                 <h2 id="other-policies">University Policies</h2>
-                <h3>Important Dates for the Fall 2024 Semester</h3>
+                <h3>Important Dates for the Fall 2025 Semester</h3>
                 <ul>
-                    <li>Classes Begin on Monday, August 26, 2024</li>
-                    <li>Regular Drop Deadline is Saturday, August 31, 2024</li>
-                    <li>Regular Add Deadline is Sunday, September 1, 2024</li>
-                    <li>Labor Day-No Classes-Monday, September 2, 2024</li>
-                    <li>Final Exam Conflict Filing Period is September 30 to October 20, 2024</li>
-                    <li>Late Add/Drop Deadline is Friday, November 15, 2024</li>
-                    <li>Thanksgiving Holiday-No Classes-November 24-November 30, 2024</li>
-                    <li>Withdrawal Deadline is Friday, December 13, 2024</li>
-                    <li>Classes End on Friday, December 13, 2024</li>
+                    <li>Classes Begin on Monday, August 25, 2025</li>
+                    <li>Regular Drop Deadline is Saturday, August 30, 2025</li>
+                    <li>Regular Add Deadline is Sunday, August 31, 2025</li>
+                    <li>Labor Day-No Classes-Monday, September 1, 2025</li>
+                    <li>Final Exam Conflict Filing Period is September 29 to October 26, 2025</li>
+                    <li>Late Add/Drop Deadline is Friday, November 14, 2025</li>
+                    <li>Thanksgiving Holiday-No Classes-November 23-November 29, 2025</li>
+                    <li>Withdrawal Deadline is Friday, December 12, 2025</li>
+                    <li>Classes End on Friday, December 12, 2025</li>
+                    <li>Study Days are December 13 & 14, 2025</li>
+                    <li>Final Exams are December 15-19, 2025</li>
                 </ul>
                 <h3>University Closings</h3>
                 <p>
@@ -568,7 +570,7 @@
                 <div align="center">
                     <a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
                             src="1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
-                    <br /> © 2024 Neil J. Hatfield
+                    <br /> © 2025 Neil J. Hatfield
                     <br />
                 </div>
             </div>
