--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -27,9 +27,9 @@
             </div>
             <div id="contentnobars" role="main">
                 <p>
-                    This page serves as the syllabus for the STAT 592: Teaching Statistics course in Fall 2024. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
+                    This page serves as the syllabus for the STAT 592: Teaching Statistics course in Fall 2025. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
-                <p>Last Updated: 8/31/2024</p>
+                <p>Last Updated: 8/17/2025</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -56,7 +56,7 @@
                 <h2 id="meetingInfo">Course Meeting Info</h2>
                 <p>Our course meets once a week, in person, all semester with the exception of university holidays and closures. Each meeting is 75 minutes in length.</p>
                 <ul>
-                    <li><strong>Location:</strong> Borland 118</li>
+                    <li><strong>Location:</strong> Business 105</li>
                     <li><strong>Time:</strong> Thursdays, 1:35pm to 2:50pm (ET)</li>
                 </ul>
                 <p>Changes of venue (as needs arise) will be announced via email as soon as possible.</p>
@@ -119,8 +119,8 @@
                         <strong>Respect the Learning Process of Others:</strong> Allow people the opportunity to think, reflect, and construct their understandings. When assisting your students or your peers, pose  questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
-                <h3>Updated: Student Responsibilities</h3>
-                <p>The Fall 2024 class came up with the following responsibilities for students enrolled in the class.</p>
+                <h3><mark>TBD:</mark> Student Responsibilities</h3>
+                <p>The Fall 2025 class will have an opportunity to develop their own list of responsibilities. The following is what the Fall 2024 class chose.</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li>Avoid using language that trivializes challenges others may have (e.g., "clearly", "obviously", etc.)</li>
                     <li>Provide support for one another</li>
@@ -133,8 +133,8 @@
                     <li>(Adequately) Contribute in groups</li>
                     <li>Be respectful</li>
                 </ul>
-                <h3>Updated: Teacher Responsibilities</h3>
-                <p>Here's what the Fall 2024 class generated as teacher responsibilities.</p>
+                <h3><mark>TBD:</mark> Teacher Responsibilities</h3>
+                <p>The Fall 2025 class will have an opportunity to generate ideas for teacher responsibilities. The following is what the Fall 2024 class identified.</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li>Avoid using language that trivializes challenges others may have (e.g., "clearly", "obviously", etc.)</li>
                     <li>Be aware of students' total workload</li>
@@ -158,9 +158,9 @@
                 <p>
                     Students who are absent three or more times throughout the semester may receive a failing grade for the course. (Note: Three abscences is equivalent to missing 20% of the course.)
                 </p>
-                <h4>Updated: Participation</h4>
+                <h4><mark>TBD:</mark> Participation</h4>
                 <p>
-                    Given that this course is primarily discussion based, your participation is absolutely necessary. The Fall 2024 class came up with the following as hallmarks of participating.
+                    Given that this course is primarily discussion based, your participation is absolutely necessary. The Fall 2025 class will generate their own participation hallmarks. Here's what the Fall 2024 class felt indicated participation.
                 </p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li>Being innovative</li>
@@ -213,8 +213,8 @@
                 <p>
                     This also means that we need to be able to show and give grace to each other. We must all acknowledge that sometimes unexpected things occur and can cause problems. To this end, we need to keep open lines of communication. Reach out to me and keep me informed of external pressures.
                 </p>
-                <h3>Updated: Examination Policy</h3>
-                <p>The Fall 2024 class voted to not have a Final Exam nor any tests.</p>
+                <h3><mark>TBD:</mark> Examination Policy</h3>
+                <p>The Fall 2025 class will have an opportunity to vote on whether or not to have a Final Exam and/or any tests.</p>
                 <h3>Grading Policy</h3>
                 <p>
                     While there are different types of assignments, they are all equally important to your growth. Thus, there no category weights.
@@ -263,7 +263,7 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">Tentative Course Calendar</h2>
                 <table rules="all" border="1px" style="margin-left:auto; margin-right:auto;">
-                  <caption>Tentative Fall 2024 Schedule</caption>
+                  <caption>Tentative Fall 2025 Schedule</caption>
                   <thead>
                     <tr>
                       <th scope="col">Week</th>
@@ -274,87 +274,87 @@
                   <tbody>
                     <tr>
                       <td>1</td>
-                      <td>Thursday, August 29, 2024</td>
-                      <td>Welcome</td>
+                      <td>Thursday, August 28, 2025</td>
+                      <td>Welcome <br/> Policy Dicussion/Voting <br/> What is Teaching/Learning?</td>
                     </tr>
                     <tr>
                       <td>2</td>
-                      <td>Thursday, September 5, 2024</td>
-                      <td>Assessment and Feedback, Part 1</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Thursday, September 12, 2024</td>
-                      <td>Assessment and Feedback, Part 2</td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>Thursday, September 19, 2024</td>
-                      <td>Conceptual Understanding</td>
-                    </tr>
-                    <tr>
-                      <td>5</td>
-                      <td>Thursday, September 26, 2024</td>
-                      <td>Learning Objectives and Outcomes</td>
-                    </tr>
-                    <tr>
-                      <td>6</td>
-                      <td>Thursday, October 3, 2024</td>
+                      <td>Thursday, September 4, 2025</td>
                       <td>Statistics Learning Environments</td>
                     </tr>
                     <tr>
-                      <td>7</td>
-                      <td>Thursday, October 10, 2024</td>
+                      <td>3</td>
+                      <td>Thursday, September 11, 2025</td>
+                      <td>Conceptual Understanding</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Thursday, September 18, 2025</td>
+                      <td>Learning Objectives and Outcomes</td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>Thursday, September 25, 2025</td>
                       <td>Intro to Models of Teaching</td>
                     </tr>
                     <tr>
-                      <td>8</td>
-                      <td>Thursday, October 17, 2024</td>
+                      <td>6</td>
+                      <td>Thursday, October 2, 2025</td>
                       <td>Diving Deeper into Inquiry-Based Learning</td>
                     </tr>
                     <tr>
-                      <td>9</td>
-                      <td>Thursday, October 24, 2024</td>
+                      <td>7</td>
+                      <td>Thursday, October 9, 2025</td>
                       <td>The DNR Framework</td>
                     </tr>
                     <tr>
+                      <td>8</td>
+                      <td>Thursday, October 16, 2025</td>
+                      <td>Assessment and Feedback, Part 1</td>
+                    </tr>
+                    <tr>
+                      <td>9</td>
+                      <td>Thursday, October 23, 2025</td>
+                      <td>Assessment and Feedback, Part 2</td>
+                    </tr>
+                    <tr>
                       <td>10</td>
-                      <td>Thursday, October 31, 2024</td>
+                      <td>Thursday, October 30, 2025</td>
                       <td>Lesson Planning</td>
                     </tr>
                     <tr>
                       <td>11</td>
-                      <td>Thursday, November 7, 2024</td>
+                      <td>Thursday, November 6, 2025</td>
                       <td>Lesson Planning</td>
                     </tr>
                     <tr>
                       <td>12</td>
-                      <td>Thursday, November 14, 2024</td>
+                      <td>Thursday, November 13, 2025</td>
                       <td>Debrief and Plan</td>
                     </tr>
                     <tr>
                       <td>13</td>
-                      <td>Thursday, November 21, 2024</td>
+                      <td>Thursday, November 20, 2025</td>
                       <td>Debrief and Plan</td>
                     </tr>
                     <tr>
                       <td>14</td>
-                      <td>Thursday, November 28, 2024</td>
+                      <td>Thursday, November 27, 2025</td>
                       <td>Thanksgiving-No Class</td>
                     </tr>
                     <tr>
                       <td>15</td>
-                      <td>Thursday, December 5, 2024</td>
+                      <td>Thursday, December 4, 2025</td>
                       <td>Implications of Our Teaching</td>
                     </tr>
                     <tr>
                       <td>16</td>
-                      <td>Thursday, December 12, 2024</td>
+                      <td>Thursday, December 11, 2025</td>
                       <td>Being Reflective</td>
                     </tr>
                     <tr>
                       <td>17</td>
-                      <td>Thursday, December 19, 2024</td>
+                      <td>Thursday, December 18, 2025</td>
                       <td>Finals Week</td>
                     </tr>
                   </tbody>
@@ -493,8 +493,8 @@
                 <p>
                     An important part aspect of this course is to help you develop foundational ways of thinking about teaching so that you can create your own lessons. Using tools such as generative AI to design, create, prepare lessons plans for you not only cheats yourself of an invaluable learning opportunity, but it also cheats your students. Therefore, unless explicit permission is given for a particular assignment, the entire class community (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. When such use is explicitly authorized, that work should be properly documented. Direct usage of output from chatbots should be treated much like a direct quotation; derivations of such output should be treated as paraphrased text.
                 </p>
-                <h4>Updated: Generative AI Policy</h4>
-                <p>Based upon the input I received from the class, I have put in place the following policy around using generative AI tools for this course (Stat 592).</p>
+                <h4>Generative AI Policy</h4>
+                <p>I have put in place the following policy around using generative AI tools for this course (Stat 592).</p>
                 <dl>
                     <dt>Allowed Usages</dt>
                     <dd>
@@ -521,17 +521,19 @@
                     Any instances of academic dishonesty will be pursued under the <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. For more information on academic integrity, see <a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">Penn State's statement on plagiarism and academic dishonesty</a>.
                 </p>
                 <h2 id="other-policies">University Policies</h2>
-                <h3>Important Dates for the Fall 2024 Semester</h3>
+                <h3>Important Dates for the Fall 2025 Semester</h3>
                 <ul>
-                    <li>Classes Begin on Monday, August 26, 2024</li>
-                    <li>Regular Drop Deadline is Saturday, August 31, 2024</li>
-                    <li>Regular Add Deadline is Sunday, September 1, 2024</li>
-                    <li>Labor Day-No Classes-Monday, September 2, 2024</li>
-                    <li>Final Exam Conflict Filing Period is September 30 to October 20, 2024</li>
-                    <li>Late Add/Drop Deadline is Friday, November 15, 2024</li>
-                    <li>Thanksgiving Holiday-No Classes-November 24-November 30, 2024</li>
-                    <li>Withdrawal Deadline is Friday, December 13, 2024</li>
-                    <li>Classes End on Friday, December 13, 2024</li>
+                    <li>Classes Begin on Monday, August 25, 2025</li>
+                    <li>Regular Drop Deadline is Saturday, August 30, 2025</li>
+                    <li>Regular Add Deadline is Sunday, August 31, 2025</li>
+                    <li>Labor Day-No Classes-Monday, September 1, 2025</li>
+                    <li>Final Exam Conflict Filing Period is September 29 to October 26, 2025</li>
+                    <li>Late Add/Drop Deadline is Friday, November 14, 2025</li>
+                    <li>Thanksgiving Holiday-No Classes-November 23-November 29, 2025</li>
+                    <li>Withdrawal Deadline is Friday, December 12, 2025</li>
+                    <li>Classes End on Friday, December 12, 2025</li>
+                    <li>Study Days are December 13 & 14, 2025</li>
+                    <li>Final Exams are December 15-19, 2025</li>
                 </ul>
                 <h3>University Closings</h3>
                 <p>
@@ -560,7 +562,7 @@
                 <div align="center">
                     <a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
                             src="1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
-                    <br /> © 2024 Neil J. Hatfield
+                    <br /> © 2025 Neil J. Hatfield
                     <br />
                 </div>
             </div>
