--- a/teaching.html
+++ b/teaching.html
@@ -31,10 +31,12 @@
           </ul>
         </div>
         <div id="contentnobars">
-          <h2 id="current">Current Courses-Spring 2025</h2>
+          <h2 id="current">Current Courses-Fall 2025</h2>
             <ul>
+              <li>PSU 16: First-Year Seminar-Statistics/Data Science (ECoS). Check out the <a href="psu16syllabus.html" class="bodylinks">PSU 16.550 Course FAQ (syllabus)</a>
               <li>STAT 184: Introduction to R. Check out the <a href="stat184syllabus.html" class="bodylinks">STAT 184 Course FAQ (syllabus)</a>.</li>
               <li>STAT 461: Analysis of Variance. Check out the <a href="stat461syllabus.html" class="bodylinks">STAT 461 Course FAQ (syllabus)</a>.</li>
+              <li>STAT 592: Teaching Statistics; Check out the <a href="stat592syllabus.html" class="bodylinks">Stat 592 Course FAQ (syllabus)</a>.
           </ul>
           <h2 id="readings"><a name="readings"></a>Useful Readings</h2>
           <p>The following readings are some that I have been developing for a number of semesters and reflect my most recent thinking in the various areas. I tend to update these files periodically so you'll want to check the files here to see if you have the most recent.  If you have constructive feedback, please feel free to send me your thoughts.</p>
@@ -67,13 +69,12 @@
           </h2>
           <h3>Pennsylvania State University</h3>
           <ul>     
-            <li>PSU 16: First-Year Seminar-Statistics/Data Science (ECoS). Check out the <a href="psu16syllabus.html" class="bodylinks">PSU 16.550 Course FAQ (syllabus)</a>; Fall 2024.</li>       
-              <li>STAT 184: Introduction to R-Fall 2022, 2023</li>
-              <li>STAT 380: Data Science Through Statistical Reasoning and Computation-Fall <a href="stat380syllabus.html" class="bodylinks">2023 (click to see syllabus)</a></li>
-              <li>STAT 461: Analysis of Variance-Spring 2020, 2021, 2022, 2023, 2024; Fall 2022, 2023, 2024</li>
-              <li>STAT 592: Teaching Statistics-Fall 2021<sup>*</sup>, 2022, 2023, 2024; Check out the <a href="stat592syllabus.html" class="bodylinks">Stat 592 Course FAQ (syllabus)</a>.</li>
-              <li>STAT 597: Statistics Education Reserach Special Topics--Spring 2020<sup>*</sup>, 2022<sup>*</sup></li>
-              <li>STAT 597.005 Statistics Eduction: From Theory to Practice. Check out the <a href="stat597syllabus.html" class="bodylinks">STAT597 Course FAQ-Spring 2024 (syllabus)</a>.</li>
+            <li>PSU 16: First-Year Seminar-Statistics/Data Science (ECoS)--Falls 2024, 2025.</li>       
+              <li>STAT 184: Introduction to R-Falls 2022, 2023, 2024, 2025; Spring 2025.</li>
+              <li>STAT 380: Data Science Through Statistical Reasoning and Computation-Fall <a href="stat380syllabus.html" class="bodylinks">2023 (click to see syllabus)</a>.</li>
+              <li>STAT 461: Analysis of Variance-Springs 2020, 2021, 2022, 2023, 2024, 2025; Falls 2022, 2023, 2024, 2025.</li>
+              <li>STAT 592: Teaching Statistics-Falls 2021<sup>*</sup>, 2022, 2023, 2024, 2025.</li>
+              <li>STAT 597: Statistics Education Reserach Special Topics--Springs 2020<sup>*</sup>, 2022<sup>*</sup>, 2024<sup>*</sup>; check out the <a href="stat597syllabus.html" class="bodylinks">STAT597 Course FAQ-Spring 2024 (syllabus)</a>.</li>
           </ul>
           <p>
             <sup>*</sup> indicates co-teaching.
