Fix spelling typo

--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -275,7 +275,7 @@
                     <tr>
                       <td>1</td>
                       <td>Thursday, August 28, 2025</td>
-                      <td>Welcome <br/> Policy Dicussion/Voting <br/> What is Teaching/Learning?</td>
+                      <td>Welcome <br/> Policy Discussion/Voting <br/> What is Teaching/Learning?</td>
                     </tr>
                     <tr>
                       <td>2</td>
