--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -117,7 +117,7 @@
                 <h2 id="goalsObjectives">What will I learn in this class? (Course Goals and Objectives)</h2>
                 <h3>Course Goals</h3>
                 <p>
-                    The overarching goals for this course are to provide students with opportuntities and experiences with statistical software so that they may develop their programming skills, capabilities to use software in data analysis, and productive ways of thinking for data analysis and problem solving.
+                    The overarching goals for this course are to provide students with opportunities and experiences with statistical software so that they may develop their programming skills, capabilities to use software in data analysis, and productive ways of thinking for data analysis and problem solving.
                 </p>
                 <h3>Learning Objectives</h3>
                 <p>To achieve these goals, we've established the following learning objectives--themes/categories for your development and growth.</p>
