Update PSU 16 Schedule

--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -311,12 +311,13 @@
                     <tr>
                       <td>8</td>
                       <td>Monday, October 13, 2025</td>
-                      <td>Mid-Semester Check-In</td>
+                      <td>Mid-Semester Check-In <br/>
+                        Majoring in Stats/Data Science<br/>Guest: Andrea Brandimarte</td>
                     </tr>
                     <tr>
                       <td>9</td>
                       <td>Monday, October 20, 2025</td>
-                      <td>???Majoring in Stats/Data Science<br/>Guest: Andrea Brandimarte</td>
+                      <td>OSE Undergraduate Research<br/>Guest: Dr. Tiffany Mathews</td>
                     </tr>
                     <tr>
                       <td>10</td>
@@ -326,7 +327,7 @@
                     <tr>
                       <td>11</td>
                       <td>Monday, November 3, 2025</td>
-                      <td>???OSE Undergraduate Research<br/>Guest: Dr. Tiffany Mathews</td>
+                      <td>TBD</td>
                     </tr>
                     <tr>
                       <td>12</td>
