--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -322,12 +322,12 @@
                     <tr>
                       <td>10</td>
                       <td>Monday, October 27, 2025</td>
-                      <td>???OSE: Careers, Internships, Co-ops, and PD<br/>Guest: Dustin Zettle</td>
+                      <td>TBD</td>
                     </tr>
                     <tr>
                       <td>11</td>
                       <td>Monday, November 3, 2025</td>
-                      <td>TBD</td>
+                      <td>OSE: Careers, Internships, Co-ops, and PD<br/>Guest: Dustin Zettle</td>
                     </tr>
                     <tr>
                       <td>12</td>
