Updates PSU16 tentative calendar

--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -311,8 +311,7 @@
                     <tr>
                       <td>8</td>
                       <td>Monday, October 13, 2025</td>
-                      <td>Mid-Semester Check-In <br/>
-                        Majoring in Stats/Data Science<br/>Guest: Andrea Brandimarte</td>
+                      <td>Mid-Semester Check-In</td>
                     </tr>
                     <tr>
                       <td>9</td>
@@ -322,7 +321,7 @@
                     <tr>
                       <td>10</td>
                       <td>Monday, October 27, 2025</td>
-                      <td>TBD</td>
+                      <td>Majoring in Stats/Data Science<br/>Guests: Ms. Andrea Brandimarte and Dr. Priyangi Bulathsinhala</td>
                     </tr>
                     <tr>
                       <td>11</td>
@@ -332,12 +331,12 @@
                     <tr>
                       <td>12</td>
                       <td>Monday, November 10, 2025</td>
-                      <td>???Guest Panel 1</td>
+                      <td>Guest Panel 1</td>
                     </tr>
                     <tr>
                       <td>13</td>
                       <td>Monday, November 17, 2025</td>
-                      <td>???Guest Panel 2</td>
+                      <td>Guest Panel 2</td>
                     </tr>
                     <tr>
                       <td>14</td>
