--- a/Stat184_PayGradeRanks.html
+++ b/Stat184_PayGradeRanks.html
@@ -21,7 +21,7 @@
     }
   </style>
   <h1>Stat 184 Activity Information</h1>
-  <p>This page contains information needed for a Stat 184 activity meant to help students practice web scrapping and wrangling data. Information in this table comes from the <a href="https://www.defense.gov/Our-Story/Insignias/">Defense Almanac and Department of Defense Insignias</a>.</p>
+  <p>This page contains information needed for a Stat 184 activity meant to help students practice web scrapping and wrangling data. Information in this table comes in part from the <a href="https://www.defense.gov/Our-Story/Insignias/" target="_blank">Defense Almanac and Department of Defense Insignias</a> and from the various branch's websites.</p>
   <table>
     <caption>Armed Forces Comparative Pay Grades and Ranks</caption>
     <thead>
@@ -128,7 +128,7 @@
         <td>Warrant Officer</td>
         <td>Warrant Officer</td>
         <td>Warrant Officer</td>
-        <td align="center">--</td>
+        <td>Warrent Officer</td>
         <td align="center">--</td>
         <td align="center">--</td>
       </tr>
@@ -137,7 +137,7 @@
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
-        <td align="center">--</td>
+        <td>Chief Warrent Officer</td>
         <td align="center">--</td>
         <td>Chief Warrant Officer</td>
       </tr>
@@ -146,7 +146,7 @@
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
-        <td align="center">--</td>
+        <td>Chief Warrent Officer</td>
         <td align="center">--</td>
         <td>Chief Warrant Officer</td>
       </tr>
@@ -155,7 +155,7 @@
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
-        <td align="center">--</td>
+        <td>Chief Warrent Officer</td>
         <td align="center">--</td>
         <td>Chief Warrant Officer</td>
       </tr>
@@ -164,7 +164,7 @@
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
         <td>Chief Warrant Officer</td>
-        <td align="center">--</td>
+        <td>Chief Warrent Officer</td>
         <td align="center">--</td>
         <td align="center">--</td>
       </tr>
@@ -262,7 +262,7 @@
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="8"><em>Note:</em> -- indicates that a pay grade is not used by a service branch</td>
+            <td colspan="8"><em>Note:</em> -- indicates that a pay grade is not currently used by a service branch</td>
         </tr>
     </tfoot>
   </table>
