--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -30,7 +30,7 @@
                     This page serves as the Course Frequenty Asked Questions (FAQ) page and syllabus for Neil's section (Sec. 1) of STAT 184: Introduction to R course in Fall 2025. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
                 <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of a course policy. After the first week, we'll have these sections filled out.</p>
-                <p>Last updated: 8/22/2025</p>
+                <p>Last updated: 9/5/2025</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -72,7 +72,7 @@
                     I also encourage students to come visit with me in person when possible. My office is Thomas 425A. I have an open door policy meaning that if my door is open and I'm there, you can talk with me.
                 </p>
                 <p>
-                    As the semester gets underway, I will announce when I have Student Hours scheduled for this course. Student Hours will be held either in Thomas 424/425 or Thomas 425A.
+                    My Student Hours for Fall 2025 are Mondays and Fridays, ~4:35pm to 6:00pm and will be Thomas 424/425 or Thomas 425A.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="courseMaterials">What materials do I need for the class? (Course Materials)</h2>
@@ -154,50 +154,42 @@
                     </li>
                 </ol>
                 <h3>Student Responsibilities</h3>
-                <p><mark>Students will have an opportunity to put together a list of their responsibilities.</mark></p>
-                <p>Spring 2025's list of student responsibilities</p>
+                <p>Fall 2025's list of student responsibilities</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
-                    <li>Open communication</li>
-                    <li>Come to class prepared</li>
-                    <li>Make work readable to others</li>
-                    <li>Be willing to participate</li>
-                    <li>Be respectful to others</li>
-                    <li>Turn work in on time</li>
-                    <li>Actively participate</li>
-                    <li>Engage in discussions</li>
-                    <li>Be present</li>
-                    <li>Don't disturb others</li>
-                    <li>Be open to helping others</li>
-                    <li>Don't judge others</li>
-                    <li>Try your best</li>
-                    <li>Strive to meet deadlines</li>
-                    <li>Attend class</li>
-                    <li>Don't cheat</li>
-                    <li>Be accountable/take responsibility</li>
-                    <li>Be professional</li>
+                    <li>Help each other</li> 
+                    <li>Make sure to engage in the class</li> 
+                    <li>Actively participate</li> 
+                    <li>Show up (be punctual)</li> 
+                    <li>Be nice and kind</li> 
+                    <li>Do your part, esp. in groups</li> 
+                    <li>Be accountable individually and in groups</li> 
+                    <li>Seek help when you need to</li> 
+                    <li>Participate in discussions</li> 
+                    <li>Have a positive attitude</li> 
+                    <li>Communicate</li> 
+                    <li>Don't cheat</li> 
+                    <li>Don't play off sterotypes</li> 
+                    <li>Don't be biased towards others (e.g, racism)</li> 
+                    <li>Be considerate</li> 
+                    <li>Collaborate</li> 
+                    <li>Respond to members of the class community</li>
                 </ul>
                 <h3>Instructor Responsibilities</h3>
-                <p><mark>Students will have an opportunity to put together a list of teacher responsibilities.</mark></p>
-                <p>The Spring 2025 classes highlighted that they wanted me to make sure that I focused on walking through code and being clear with grading.</p>
-                <p>Spring 2025's list Instructor responsibilities</p>
+                <p>Fall 2025's list Instructor responsibilities</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
-                    <li>Be understanding of other student commitments</li>
-                    <li>Give well-thought out answers to questions</li>
-                    <li>Be willing to give assistance</li>
-                    <li>Provide clarity</li>
-                    <li>Be clear with grading</li>
-                    <li>Be flexible</li>
-                    <li>Provide timely feedback</li>
-                    <li>Be organized</li>
-                    <li>Communicate with us</li>
-                    <li>Respect students and their time</li>
-                    <li>Give clear instructions</li>
-                    <li>Respond in a timely fashion</li>
-                    <li>Provide safe learning/growing environment</li>
-                    <li>Make being wrong okay</li>
-                    <li>Connect course to real-world examples</li>
-                    <li>Hold student/office hours</li>
-                    <li>Walk us through code</li>
+                    <li>Be patient</li> 
+                    <li>Keep tracking our progress</li> 
+                    <li>Be open minded</li> 
+                    <li>Use fair, equitable grading</li> 
+                    <li>Answer questions</li> 
+                    <li>Provide help</li> 
+                    <li>Respond to emails</li> 
+                    <li>Have a positive attitude</li> 
+                    <li>Be engaging</li> 
+                    <li>Provide clear instructions</li> 
+                    <li>Be accessible</li> 
+                    <li>Provide feedback</li> 
+                    <li>Be respectful</li>
                 </ul>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
@@ -216,25 +208,23 @@
                 </p>
                 <h4 id="participation">Participation</h4>
                 <p>Physically attending class is not sufficient to learn the material. You need to actively take part in class; that is, participate</p>
-                <p><mark>Students will have an opportunity to put together a working definition of participation.</mark>
                 </p>
                 <p>
-                    The Spring 2025 classes generated the following markers of participating in class.
+                    The Fall 2025 classes generated the following markers of participating in class.
                 </p>
                 <ul style="column-count:3; -webkit-column-count:3; -moz-column-count:3; -o-column-count:3;">
-                    <li>Engage in active listening</li>
-                    <li>Don't be on your phone</li>
-                    <li>Don't be distracting to others (or yourself)</li>
-                    <li>Be present</li>
-                    <li>Be attentive</li>
-                    <li>Answer and ask questions</li>
-                    <li>Engage with activities (including voting)</li>
+                    <li>Show up</li>
+                    <li>Do your work</li>
+                    <li>Engage in conversations</li>
+                    <li>Ask questions</li>
+                    <li>Complete assignments</li>
+                    <li>Pay attention</li>
+                    <li>Answer questions</li>
+                    <li>Actively listen</li>
+                    <li>Share ideas/thoughts</li>
                     <li>Take notes</li>
-                    <li>Raise your hand</li>
-                    <li>Share your thoughts</li>
-                    <li>Interact with others</li>
-                    <li>Sections 1, 2, and 4: Use the cups</li>
-                    <li>Section 3: Turn on camera</li>
+                    <li>Do engagement actions (e.g., signal cups, TopHat, Slido, etc.)</li>
+                    <li>Stay off your phone when you're not supposed to be on it</li>
                 </ul>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">How does grading work? (Assignments and Assessment)</h2>
@@ -269,14 +259,14 @@
                     </dd>
                     <dt>Tests</dt>
                     <dd>
-                        <mark>Students will vote on whether there will be any tests.</mark>
+                        The Fall 2025 class voted for no tests.
                     </dd>
                     <dd>
                         In the event that there is at least one test, the test will be held in a proctored environment such as in class or in the Testing Center. Electronic devices may be limited and/or require the use of lockdown systems.
                     </dd>
                     <dt>Final Exam</dt>
                     <dd>
-                        Students will vote on whether there will be a Final Exam.
+                        The Fall 2025 class voted for no final exam.
                     </dd>
                     <dt>Course Group Project</dt>
                     <dd>
@@ -285,9 +275,9 @@
                 </dl>
                 <h3 id="late-passes">Late Submissions</h3>
                 <p>
-                    Assignments that are part of MyOpenMath (MOM) will allow each student to use a Late Pass to given themselves additional time to complete the assignment. <mark>The class will vote on 1) how much time each Late Pass is worth, and 2) how many Late Passes students can use on an individual assignment.</mark>
+                    Assignments that are part of MyOpenMath (MOM) will allow each student to use a Late Pass to given themselves additional time to complete the assignment. 
                 </p>
-                <p>The Spring classes voted to have each Late Pass be worth 24 hours and students could use up to two (2) per any eligible assignment.</p>
+                <p>The Fall 2025 classes voted to have each Late Pass be worth 24 hours and students could use up to three (3) per any eligible assignment.</p>
                 <p>
                     There are several important things to keep in mind related to Late Passes:
                 </p>
@@ -326,8 +316,7 @@
                     Due to the existence of Late Passes and extensions, I will not make full answer keys available to students until after all assignments are submitted. Calculational answers will be available in the homework system once you've submitted the assignment and the Late Pass Period has passed. Keep in mind that if you opt to view answers after the due date, the system will bar you from using a Late Pass.
                 </p>
                 <h3 id="testing-policy">Testing Policy</h3>
-                <p><mark>Depending on how the class votes, we will update the testing policy.</mark></p>
-                <p>The Spring 2025 classes voted to not have tests.</p>
+                <p>The Fall 2025 classes voted to not have tests.</p>
                 <h3 id="grading">Grading Policy</h3>
                 <p>
                     We use a Standards-Based Grading System in this course. This means that we live and breath the learning outcomes when thinking about assessing each one of you. Throughout each assignment (homework, quizzes, tests, coding interview, final exam, and course project), every question connects to at least one of the learning outcomes. Each time you answer a question, you are adding to the body of evidence about your understanding for each outcome. I use that entire body of evidence to evaluate where you end up for each learning outcome.
@@ -524,33 +513,28 @@
                 <h3>Consequences</h3>
                 <p>
                     Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/advising-and-student-services/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. 
-                </p>
-                <p><mark>The class will have an opportunity to create the matrix of proposed consequences/sanctions for violating academic integrity.</mark></p>
+                </p>p>
                 <table rules="all" border="1pt">
-                    <caption>Spring 2025 Consequences/Sanctions for Violating Academic Integrity</caption>
+                    <caption>Fall 2025 Consequences/Sanctions for Violating Academic Integrity</caption>
                     <tr>
                         <td></td>
-                        <th scope="col">First Time</th>
-                        <th scope="col">Second Time</th>
-                        <th scope="col">Third or Higher Time</th>
+                        <th scope="col">First Offense</th>
+                        <th scope="col">Subsequent Offenses</th>
                     </tr>
                     <tr>
                         <th scope="row">Minor</th>
-                        <td>Redo the assignment</td>
-                        <td>Redo the assignment and lower assignment grade by 1 level</td>
-                        <td>Zero on the assignment</td>
+                        <td>Redo the impacted parts of the assignment</td>
+                        <td>Treat as a Moderate violation</td>
                     </tr>
                     <tr>
                         <th scope="row">Moderate</th>
-                        <td>Redo the assignment and lower assignment grade by 2 levels</td>
-                        <td>Zero on the assignment</td>
+                        <td>Redo the assignment</td>
                         <td>Zero on the assignment</td>
                     </tr>
                     <tr>
                         <th scope="row">Major</th>
                         <td>Zero on the assignment</td>
-                        <td>Course Grade is lowered by 1 full step</td>
-                        <td>Fail the Course (Recommend Grade XF)</td>
+                        <td>Zero on the assignment</td>
                     </tr>
                 </table>
                 <p>
